# event-ingestion-platform

./: Cargo.toml  README.md  docker-compose.yml
migrations/: 20260608101525_events.sql  20260608172500_add_idempotency_key_to_events.sql  20260608183000_add_request_fingerprint_to_events.sql  20260608192000_add_unique_idempotency_key_per_producer.sql  20260608200000_add_event_status_check.sql  20260609130000_add_event_lock_ownership.sql  20260609190000_add_event_completion_audit.sql  20260610023220_add_retry_and_dead_letter.sql
src/: handlers.rs  main.rs  models.rs
