[package]
name = "event-ingestion-platform"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
dotenvy = "0.15"
sqlx = { version = "0.9", features = ["postgres", "runtime-tokio", "tls-rustls", "uuid", "chrono"] }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.11"
hex = "0.4"
rand = "0.10"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
